--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "^52.0.37",
+    "expo": "53.0.9",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "~16.0.17",
-    "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "expo-camera": "16.1.6",
+    "expo-font": "13.3.1",
+    "expo-image-picker": "16.1.4",
+    "expo-status-bar": "2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "2.24.0",
+    "react-native-reanimated": "3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
